--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,56 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/jwtspringboot?useSSL=false
+# =================================
+# APP - CONFIGURATION
+# =================================
+server.port= 9001
+
+# =================================
+# DATABASE - MYSQL
+# =================================
+spring.datasource.url= jdbc:mysql://localhost:3306/vetsystem?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username= root
 spring.datasource.password= soporte
 
+# =================================
+# JPA - HIBERNATE
+# =================================
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 
-# App Properties
-app.jwtSecret= Wslk2jk232lgh3h32yh3h12wse41
+# =================================
+# DATABASE - POSTGRES
+# =================================
+#spring.datasource.url= jdbc:postgresql://localhost:5432/jwt?useSSL=false
+#spring.datasource.username= postgres
+#spring.datasource.password= Tecnologia123*
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.show-sql=true
+
+# =================================
+# JPA - HIBERNATE
+# =================================
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.show-sql=true
+
+# =================================
+# JWT - PROPERTIES
+# =================================
+app.jwtSecret= rasysboxSecretKey
 app.jwtExpirationMs= 86400000
+
+# =================================
+# SWAGGER - CONFIGURATION
+# =================================
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+swagger.properties.project-name=vet-product-service
+swagger.properties.project-short-description=Service for VET system UTP - Grupo 2
+swagger.properties.project-tos-msg=API Terms Of Service
+swagger.properties.project-tos-link=Terms of service URL
+swagger.properties.project-licence-msg=License of API
+swagger.properties.project-licence-link=API license URL
+swagger.properties.organization-url=www.mintic.gov.co
+swagger.properties.developer-name=Grupo 2 - UTP
+swagger.properties.developer-mail=correo@mail.com
